Feature: Configuration of database completed

--- a/.env
+++ b/.env
@@ -2,17 +2,18 @@ APP_HOST = http://localhost
 APP_PORT = 3000
 
 API_VERSION = v1
+NODE_ENV = test
 
-DATABASE = express
-USERNAME = root
-PASSWORD = root
-HOST = 127.0.0.1
-PORT = 3306
-DIALECT = mysql
+DATABASE = postgres
+USERNAME = master
+PASSWORD = Master1234
+HOST = dhronacharya.c3m8ecio4z3m.ap-south-1.rds.amazonaws.com
+PORT = 5432
+DIALECT = postgres
 
-DATABASE_TEST = express
-USERNAME_TEST = root
-PASSWORD_TEST = root
-HOST_TEST = 127.0.0.1
-PORT_TEST = 3306
-DIALECT_TEST = mysql
+DATABASE_TEST = postgres
+USERNAME_TEST = master
+PASSWORD_TEST = Master1234
+HOST_TEST = dhronacharya.c3m8ecio4z3m.ap-south-1.rds.amazonaws.com
+PORT_TEST = 5432
+DIALECT_TEST = postgres
