--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@sendgrid/mail": "^7.2.5",
+    "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -29,7 +31,9 @@
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
+    "nodemailer": "^7.0.3",
     "pg": "^8.16.0",
+    "razorpay": "^2.9.6",
     "sequelize": "^6.3.5",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
