--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.1",
   "description": "",
   "type": "module",
-  "main": "build/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "lint": "eslint . --ext .js",
-    "lint-fix": "eslint . --ext .js --fix"
+    "dev": "nodemon src/index.js"
   },
   "author": "Tolustar",
   "license": "MIT",
