updated codes upto locations

--- a/.env
+++ b/.env
@@ -5,14 +5,14 @@ API_VERSION = v1
 NODE_ENV = test
 
 DATABASE = postgres
-USERNAME = master
+USER_NAME = master
 PASSWORD = Master1234
 HOST = dhronacharya.c3m8ecio4z3m.ap-south-1.rds.amazonaws.com
 PORT = 5432
 DIALECT = postgres
 
 DATABASE_TEST = postgres
-USERNAME_TEST = master
+USER_NAME_TEST = master
 PASSWORD_TEST = Master1234
 HOST_TEST = dhronacharya.c3m8ecio4z3m.ap-south-1.rds.amazonaws.com
 PORT_TEST = 5432
@@ -39,5 +39,8 @@ OTP_EXPIRY_MINUTES=15
 # EMAIL_PASS=mkplokbgiejcuete
 
 # Razorpay Credentials
-# RAZORPAY_KEY_ID=your_key_id_here
-# RAZORPAY_KEY_SECRET=your_key_secret_here
+ RAZORPAY_KEY_ID=rzp_test_dh3YyohVJXkWbI
+ RAZORPAY_KEY_SECRET=CsWYpbUQ21Lbaw6Bll9b0MRx
+
+
+GOOGLE_API_KEY=AIzaSyB2fZzo4kGI7K1iOW_o1QkRItwScC4Ma-I
