updated notification controller

--- a/.env
+++ b/.env
@@ -64,3 +64,8 @@ GOOGLE_API_KEY=AIzaSyB2fZzo4kGI7K1iOW_o1QkRItwScC4Ma-I
 
 TEXTLOCAL_API_KEY=aky_2ylN1zRrYyAXnddOgZmL7y1adC0
 TEXTLOCAL_SENDER=TXTLCL
+# TextLocal for SMS
+# TEXTLOCAL_API_KEY=your_textlocal_api_key
+
+# Interakt for WhatsApp (or any provider like Twilio, Gupshup)
+# INTERAKT_API_TOKEN=your_interakt_api_token
