sms utils updated

--- a/.env
+++ b/.env
@@ -44,3 +44,7 @@ TEXTLOCAL_SENDER=TXTLCL
 
 # Interakt for WhatsApp (or any provider like Twilio, Gupshup)
 # INTERAKT_API_TOKEN=your_interakt_api_token
+
+TWILIO_ACCOUNT_SID=AC8591e5f024d4946c9b828d8082ba230d
+TWILIO_AUTH_TOKEN=3010782638ac0b4e0534c894321ec80a
+TWILIO_PHONE_NUMBER=+15074310716
