--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pg": "^8.16.0",
     "razorpay": "^2.9.6",
     "sequelize": "^6.3.5",
+    "twilio": "^5.7.1",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   },
