--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
+    "node-cron": "^4.1.1",
     "nodemailer": "^7.0.3",
     "pg": "^8.16.0",
     "razorpay": "^2.9.6",
