--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
@@ -32,6 +33,7 @@
     "nodemailer": "^7.0.3",
     "pdfkit": "^0.17.1",
     "pg": "^8.16.0",
+    "rate-limiter-flexible": "^7.2.0",
     "razorpay": "^2.9.6",
     "sequelize": "^6.3.5",
     "twilio": "^5.7.1",
